--- a/SMSForward/app/src/main/res/layout/activity_main.xml
+++ b/SMSForward/app/src/main/res/layout/activity_main.xml
@@ -35,6 +35,16 @@
         app:layout_constraintStart_toEndOf="@+id/showlist_button"
         app:layout_constraintTop_toTopOf="parent" />
 
+    <Button
+        android:id="@+id/GPSButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="44dp"
+        android:layout_marginTop="16dp"
+        android:text="GPS"
+        app:layout_constraintStart_toEndOf="@+id/showlist_button"
+        app:layout_constraintTop_toTopOf="parent" />
+
     <EditText
         android:id="@+id/phone_input"
         android:layout_width="wrap_content"
@@ -71,13 +81,5 @@
         android:layout_marginTop="216dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
-
-    <Button
-        android:id="@+id/button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Button"
-        tools:layout_editor_absoluteX="2dp"
-        tools:layout_editor_absoluteY="1dp" />
 
 </android.support.constraint.ConstraintLayout>
