--- a/SMSForward/app/src/main/res/layout/activity_main.xml
+++ b/SMSForward/app/src/main/res/layout/activity_main.xml
@@ -75,11 +75,21 @@
 
     <TextView
         android:id="@+id/display_text"
-        android:layout_width="289dp"
-        android:layout_height="262dp"
-        android:layout_marginStart="60dp"
-        android:layout_marginTop="216dp"
+        android:layout_width="304dp"
+        android:layout_height="56dp"
+        android:layout_marginStart="36dp"
+        android:layout_marginTop="204dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <ImageView
+        android:id="@+id/imageView"
+        android:layout_width="280dp"
+        android:layout_height="195dp"
+        android:layout_marginBottom="32dp"
+        android:layout_marginStart="52dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:srcCompat="@mipmap/ic_launcher_foreground" />
 
 </android.support.constraint.ConstraintLayout>
